turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:6: error: type mismatch;
 found   : Int(0)
 required: java.awt.Color
  if (ci==colors.length) {colorie(0)} else {colorie (ci+1)}
                                  ^LangtonsAnt:6: error: type mismatch;
 found   : Int
 required: java.awt.Color
  if (ci==colors.length) {colorie(0)} else {colorie (ci+1)}
                                                       ^